tests/NormalTests/paczka1/small_fuzzy/29607672.err
Error in line 5: QAi2YoLyD6 A233 64,4
Error in line 1: LZfgG S278 56,9
